public/styles/index.css
html {
  font-family: 'Lato', 'Arial', sans-serif;
  color: #FFFFFF;
  background-color: #000000;
  font-weight: 400;
  font-size: 20px;
  text-rendering: optimizeLegibility;
}

.row {
  max-width: 80%;
  margin: 0 auto;
}

hr {
  border: none;
  border-top: 2px solid;
  margin: 1em 15%;
}


/* ----------------------------------------------- */
/* CLOCK */
/* ----------------------------------------------- */
.clock-container {
  font-weight: 300;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.clock {
  font-size: 5vh;
}

.date {
}


/* ----------------------------------------------- */
/* WEATHER */
/* ----------------------------------------------- */

.temperature-container {
  padding-top: 3vh;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.temperature-main {
  display: flex;
  justify-content: center;
}

.temperature-number {
  margin-left: 3vw;
  font-size: 20vh;
}

.temperature-icon {
  font-size: 22vh;
}

.temperature-description {
  padding-top: 2vh;
  font-weight: 300;
}

.temperature-extras {
  display: flex;
  font-size: 3vh;
  padding-top: 3vh;
}

.temperature-high-and-low {
  padding-right: 6vw;
}

.temperature-percipitation-time-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-right: 6vw;
}

.temperature-percipitation-time-icon {
  margin-right: 1vh;
}

.temperature-percipitation-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.temperature-percipitation-icon {
  align-self: flex-end;
  margin-right: 1vh;
}

.temperature-sub-container {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 5vh;
}

.temperature-sub {
  padding-top: 3vh;
  padding-left: 1vw;
  padding-right: 1vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.temperature-sub-day {
  font-size: 3vh;
}

.temperature-sub-icon {
  padding-top: 2vh;
}


/* ----------------------------------------------- */
/* CALENDAR */
/* ----------------------------------------------- */

.calendar-container {
  padding-left: 20vw;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: flex-start;
}

.calendar-event {
  display: flex;
  align-items: center;
  padding-bottom: 2vh;
}

.calendar-event-icon {
  font-size: 5vh;
  padding-right: 2vw;
}

.calendar-event-name {
  font-size: 3vh;
}

